WYSIWYG Admin: Delete, Move Up, Move Down
It is now possible to delete an existing Description directly from the WYSIWYG Admin interface.

Depending on how well the Descriptions were organized,
moving one-step up or down an element can reset all the existing positions of Descriptions inside a given Project (to avoid identical positions).

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -522,3 +522,21 @@ ul.downloads li
 	font-weight: normal;
 }
 
+a.btn
+{
+	color: #fff;
+}
+
+/* MODAL */
+
+.modal
+{
+	color: #ffffff;
+}
+
+.modal-backdrop.in
+{
+	opacity: .75;
+	filter: alpha(opacity=75);
+}
+
