--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,7 @@
   <link href='/static/css/main.css' rel='stylesheet' type='text/css' />
   <link href='/static/css/form.css' rel='stylesheet' type='text/css' />
   <link href='/static/themes/{{ THEME }}/css/main.css' rel='stylesheet' type='text/css' />
+	<script src='/static/js/data-confirm.js'></script>
   
   <!-- WavyMenu -->
 	<script src='/static/js-wavymenu/wavy.js'></script>
