Automatically clear selection when dblclick on editable field

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,8 @@
   <link href='/static/css/form.css' rel='stylesheet' type='text/css' />
   <link href='/static/themes/{{ THEME }}/css/main.css' rel='stylesheet' type='text/css' />
 	<script src='/static/js/data-confirm.js'></script>
-  
+  {% block additional_js %}{% endblock %}
+
   <!-- WavyMenu -->
 	<script src='/static/js-wavymenu/wavy.js'></script>
   <link href='/static/js-wavymenu/wavy.css' rel='stylesheet' type='text/css' />
