--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load bootstrap %}
 
 {% block page_title %}PortFolio{% endblock %}
 {% block title %}PortFolio{% endblock %}
@@ -28,17 +29,44 @@
       {% endfor %}
 	  </div>
 	{% endfor %}
+  
   {% if request.user.is_authenticated %}
-    <div class="details">
+    <div class="details" id="add-project">
       <h2 id="year" data-anchor="Add">???</h2>
+      
       <div class="postit-wrapper">
-        <a href="#">
+        <a href="javascript:void(0);">
           <div class="postit add-project">
             <h3>New Project</h3>
             <p></p>
           </div>
         </a>
       </div>
+
+      <form method="post" class="form-horizontal" action="{% url projects.views.add_project %}">
+      {% csrf_token %}
+        <i class="glyphicon glyphicon-remove form-close"></i>
+        {{ empty_project_form|as_bootstrap }}
+        <div class="control-group"><div class="controls">
+            <button class="btn btn-primary" onclick="submit">Submit</button>
+        </div></div>
+      </form>
+
+      <script type="text/javascript">
+      <!--
+        $("#add-project form").hide();
+        
+        $("#add-project .postit").click(function() {
+          $("#add-project form").show();
+          $("#add-project .postit-wrapper").hide();    
+        });
+
+        $("#add-project form .form-close").click(function() {
+          $("#add-project form").hide();
+          $("#add-project .postit-wrapper").show();    
+        });
+      -->
+      </script>
     </div>
   {% endif %}  
 {% endblock %}
