--- a/templates/project.html
+++ b/templates/project.html
@@ -33,7 +33,7 @@
       <form method="post" class="form-horizontal" action="{% url projects.views.update_project project.pk %}">
       {% csrf_token %}
         <i class="glyphicon glyphicon-remove form-close"></i>
-        {{ empty_project_form|as_bootstrap }}
+        {{ project_form|as_bootstrap }}
         <div class="control-group"><div class="controls">
             <button class="btn btn-primary" onclick="submit">Submit</button>
             <a data-confirm="Do you really want to delete this Project?" href="{% url projects.views.delete_project project.pk %}" class="btn btn-danger">Delete Project</a>
@@ -81,17 +81,36 @@
         <div class="control-group"><div class="controls">
             <button class="btn btn-primary" onclick="submit">Submit</button>
         </div></div>
-        B
       </form>
     {% endfor %}
   </div>
   {% endif %}
 
-  {% if project.download_set.all|length > 0 %}
+  {% if request.user.is_authenticated or project.download_set.all|length > 0 %}
     <ul class="downloads" data-anchor="Download">
     {% for down in project.download_set.all %}
-      <li><a href="/media/{{ down.down }}" target="blank_">{{ down.down }}</a></li>
+      <li>
+        <a href="/media/{{ down.down }}" target="blank_">{{ down.down }}</a>
+        {% if request.user.is_authenticated %}
+          <a data-confirm="Do you really want to delete this Download?" href="{% url projects.views.delete_download down.pk %}">
+            <i class="glyphicon glyphicon-trash"></i>
+          </a>
+        {% endif %}
+      </li>
     {% endfor %}
+    {% if request.user.is_authenticated %}
+      <li class="editable">
+        <span class="description-editable"><a href="javascript:void(0);" class="form-edit"><i class="glyphicon glyphicon-plus"></i> Add download</a></span>
+        <form method="post" enctype="multipart/form-data" class="form-horizontal" action="{% url projects.views.add_download_to project.pk %}">
+        {% csrf_token %}
+          <i class="glyphicon glyphicon-remove form-close"></i>
+          {{ empty_download_form|as_bootstrap }}
+          <div class="control-group"><div class="controls">
+              <button class="btn btn-primary" onclick="submit">Submit</button>
+          </div></div>
+        </form>
+      </li>
+    {% endif %}
     </ul>
   {% endif %}
 
