margin-size increased between .switch-more and .details

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -371,9 +371,14 @@ ul.downloads li
 
 /* YEAR LABEL */
 
-.content p+.details
+.content .details
 {
 	margin-top: 50px;
+}
+
+.content .details+.details
+{
+	margin-top: 0px;
 }
 
 .content .details
