Add meta robots on every page
login page has the value 'noindex, nofollow'
Links going to that page are tagged with rel='nofollow'

--- a/templates/login.html
+++ b/templates/login.html
@@ -4,6 +4,7 @@
 {% block page_title %}PortFolio - Login page{% endblock %}
 {% block title %}PortFolio- Login page{% endblock %}
 {% block page_description %}Career portfolio - Login page{% endblock %}
+{% block page_robots %}noindex, nofollow{% endblock %}
 
 {% block breadcrumb %}
   <li><a href="{% url projects.views.home %}">Home</a></li>
