--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
   
   <title>{% block page_title %}{% endblock %}</title>
   <meta name="description" content="{% block page_description %}{% endblock %}" />
+  <meta name="robots" content="{% block page_robots %}index, follow{% endblock %}" />
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
 
@@ -93,9 +94,9 @@
     </p>
     <p class="goto-login">
       {% if request.user.is_authenticated %}
-        <a href="{% url projects.views.logout %}"><i class="glyphicon glyphicon-off"></i> Logout</a>
+        <a href="{% url projects.views.logout %}" rel="nofollow"><i class="glyphicon glyphicon-off"></i> Logout</a>
       {% else %}
-        <a href="{% url django.contrib.auth.views.login %}?next={{ request.path }}"><i class="glyphicon glyphicon-off"></i> Login</a>
+        <a href="{% url django.contrib.auth.views.login %}?next={{ request.path }}" rel="nofollow"><i class="glyphicon glyphicon-off"></i> Login</a>
       {% endif %}
     </p>
   </div>
