<b/> and <i/> tags replaced by <strong/> and <em/> during the RawText to HTML conversion
You need to update all the RawTextDescription elements you already have in your PortFolio
if you want these changes to have an effect on your RawTextDescription.

Update RawTextDescription (manage.py shell):
  from projects.models import *
  for rt in RawTextDescription.objects.all():
      rt.save()

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3,6 +3,18 @@ body
 	counter-reset: legend;
 }
 
+strong /*b*/
+{
+	font-weight: bold;
+	font-style: normal;
+}
+
+em /*i*/
+{
+	font-weight: normal;
+	font-style: italic;
+}
+
 /* HEADER */
 
 .header
