New Architecture for SourceCode management
<!-- 1st STEP: Compatibility with previous and "current" architecture -->
<!-- MySQL -->

CREATE TABLE `projects_code` (
    `id` integer AUTO_INCREMENT NOT NULL PRIMARY KEY,
    `real_type_id` integer NOT NULL,
    `project_id` integer NOT NULL,
    `upload_time` datetime NOT NULL,
    `exclude_paths` longtext,
    `lines_ready` bool NOT NULL
)
;
ALTER TABLE `projects_code` ADD CONSTRAINT `project_id_refs_id_992dd950` FOREIGN KEY (`project_id`) REFERENCES `projects_project` (`id`);
ALTER TABLE `projects_code` ADD CONSTRAINT `real_type_id_refs_id_a0185c2b` FOREIGN KEY (`real_type_id`) REFERENCES `django_content_type` (`id`);

CREATE TABLE `projects_repository` (
    `code_ptr_id` integer NOT NULL PRIMARY KEY,
    `url` varchar(200) NOT NULL,
    `software` varchar(3) NOT NULL
)
;
ALTER TABLE `projects_repository` ADD CONSTRAINT `code_ptr_id_refs_id_e7e4320` FOREIGN KEY (`code_ptr_id`) REFERENCES `projects_code` (`id`);

ALTER TABLE `projects_sourcecode` ADD COLUMN `code_ptr_id` integer NOT NULL AFTER `id`;

ALTER TABLE `projects_sourcetotechnolines` ADD COLUMN `code_id` integer NOT NULL AFTER `id`;

INSERT INTO `django_content_type` (`name`, `app_label`, `model`) VALUES ("code", "projects", "code");
INSERT INTO `django_content_type` (`name`, `app_label`, `model`) VALUES ("repository", "projects", "repository");

<!-- 2nd STEP: Copy previous data -->
<!-- manage.py shell -->

from django.db import connection
cursor = connection.cursor()

cursor.execute("SELECT id FROM django_content_type WHERE model='sourcecode'")
sourcecode_model_id = cursor.fetchone()[0]

cursor.execute("SELECT id FROM django_content_type WHERE model='repository'")
repository_model_id = cursor.fetchone()[0]

cursor.execute("SELECT id, project_id, upload_time, exclude_paths, lines_ready FROM projects_sourcecode")
existing_sourcecodes = cursor.fetchall()
for sc in existing_sourcecodes:
	print "insert: ", cursor.execute("INSERT INTO `projects_code` (id, real_

--- a/templates/project.html
+++ b/templates/project.html
@@ -121,15 +121,21 @@
   
   {% if request.user.is_authenticated %}
     <ul class="downloads" style="margin-top: 20px;">
-      {% for sc in project.sourcecode_set.all %}
+      {% for code in project.code_set.all %}
         <li>
-          <a href="/media/{{ sc.archive }}" target="blank_">{{ sc.archive }}</a>
-          - uploaded {{ sc.upload_time }}
-          <ul id="sourcecode-lines-{{ sc.pk }}">
-            {% if sc.lines_ready %}
-              {% for line in sc.sourcetotechnolines_set.all %}<li>{{ line }}</li>{% endfor %}
+          {% with code|cast_code as sc %}
+            {% if sc.archive %}{# SourceCode #}
+              <a href="/media/{{ sc.archive }}" target="blank_">{{ sc.archive }}</a>
+            {% elif sc.url %}{# Repository #}
+              <a href="{{ sc.url }}" target="blank_">{{ sc.url }} [{{ sc.software }}]</a>
+            {% endif %}
+          {% endwith %}
+          - uploaded {{ code.upload_time }}
+          <ul id="sourcecode-lines-{{ code.pk }}">
+            {% if code.lines_ready %}
+              {% for line in code.sourcetotechnolines_set.all %}<li>{{ line }}</li>{% endfor %}
             {% else %}
-              <script type="text/javascript"> ajax_sourcecode_lines("sourcecode-lines-{{ sc.pk }}", "{% url projects.views.get_sourcecode_lines sc.pk %}"); </script>
+              <script type="text/javacodeript"> ajax_sourcecode_lines("sourcecode-lines-{{ code.pk }}", "{% url projects.views.get_sourcecode_lines code.pk %}"); </script>
             {% endif %}
           </ul>
         </li>
