project.html template correction
Problem when counting lines.

These commands are necessary for migration from SourceCode alone to Code+SourceCode+Repository (2 commits before):
+ ALTER TABLE projects_sourcecode DROP COLUMN project_id;
+ ALTER TABLE projects_sourcecode DROP FOREIGN KEY project_id_refs_id_dd0aba77;

--- a/templates/project.html
+++ b/templates/project.html
@@ -135,7 +135,7 @@
             {% if code.lines_ready %}
               {% for line in code.sourcetotechnolines_set.all %}<li>{{ line }}</li>{% endfor %}
             {% else %}
-              <script type="text/javacodeript"> ajax_sourcecode_lines("sourcecode-lines-{{ code.pk }}", "{% url projects.views.get_sourcecode_lines code.pk %}"); </script>
+              <script type="text/javacodeript"> ajax_sourcecode_lines("sourcecode-lines-{{ code.pk }}", "{% url projects.views.get_code_lines code.pk %}"); </script>
             {% endif %}
           </ul>
         </li>
