Add: Meta last-modified for projects

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
   <title>{% block page_title %}{% endblock %}</title>
   <meta name="description" content="{% block page_description %}{% endblock %}" />
   <meta name="robots" content="{% block page_robots %}index, follow{% endblock %}" />
+  {% block specific_metas %}{% endblock %}
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
 
