Projects's urls easier to read
Previous urls were: /project/project_short_name
New urls are: /2014/project_short_name

Most of the time people shorten urls in order to get one step up in the hierarchy.
With this new pattern, it is possible to do so.

Moreover, previous urls can still be used. This feature has been kept in an attempt to reduce the effect of this change on the current ranking.

--- a/templates/projects_year.html
+++ b/templates/projects_year.html
@@ -14,7 +14,7 @@
     <h2 id="year{{ year }}" data-anchor="{{ year }}">{{ year }}</h2>
     {% for project in projects %}
       <div class="postit-wrapper">
-        <a href="{% url projects.views.show_project project.name_url %}">
+        <a href="{% url projects.views.show_project project.year project.name_url %}">
           <div class="postit {% if project.private %}private{% endif %}">
             <h3>{{ project.name }}</h3>
             <p>{{ project.short_description }}</p>
