--- a/templates/home.html
+++ b/templates/home.html
@@ -35,7 +35,7 @@
       </a>
       {% for project in year_projects.list %}
         <div class="postit-wrapper">
-          <a href="{% url projects.views.show_project project.name_url %}">
+          <a href="{% url projects.views.show_project project.year project.name_url %}">
             <div class="postit {% if project.private %}private{% endif %}">
               <h3>{{ project.name }}</h3>
               <p>{{ project.short_description }}</p>
