Editable area in <head/> of base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -31,20 +31,8 @@
 	<script src='/static/js-wavymenu/wavy.js'></script>
   <link href='/static/js-wavymenu/wavy.css' rel='stylesheet' type='text/css' />
 
-  <!-- Google Analytics -->
-  <script type="text/javascript">
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-49278649-1']);
-    _gaq.push(['_setDomainName', 'dubien.me']);
-    _gaq.push(['_setAllowLinker', true]);
-    _gaq.push(['_trackPageview']);
-
-    (function() {
-      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-    })();
-  </script>
+  {% include "base_head.html" %}
+  
   <script type="text/javascript">
   <!--
     /* JavaScript preload */
